--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,55 @@
+body {
+  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+}
+
+.header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 .picture {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10%;
+  margin: 5% auto;
+  max-width: 100%; /* Ensure the image doesn't exceed its container */
+  height: auto; /* Preserve the aspect ratio of the image */
+}
+
+.main {
+  text-align: center;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+.main ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+/* Media Query for Mobile Devices */
+@media only screen and (max-width: 600px) {
+  .header {
+    font-size: 24px; /* Adjust the font size for the header */
+  }
+
+  .picture {
+    margin: 2% auto; /* Adjust the margin for the picture */
+  }
+
+  .main h3 {
+    font-size: 18px; /* Adjust the font size for the main heading */
+  }
+
+  .main ul {
+    font-size: 16px; /* Adjust the font size for the list items */
+  }
 }
