--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Montserrat';
+  src: url('./assets/fonts/MontserratRegular.otf');
+}
+
 body {
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   display: flex;
@@ -25,7 +30,7 @@ li {
   margin: 30px 0;
 }
 
-.main ul {
+ul {
   padding: 0;
   display: flex;
   flex-direction: column;
