--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,21 @@ body {
   text-align: center;
 }
 
+.link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon {
+  font-size: 24px;
+  margin-right: 10px;
+  color: #fff;
+}
+
 li {
   list-style: none;
-  margin: 30px 0;
+  margin: 10px 0;
 }
 
 ul {
